<resources>
    <string name="app_name">exam_Biologies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connexion_via_facebook">Connexion via Facebook</string>
    <string name="connexion_via_twitter">Connexion via Twitter</string>
    <string name="connexion_via_bloggies">Connexion via Bloggies</string>
    <string name="todo">TODO</string>
    <string name="connexion">Connexion</string>
    <string name="mail">eMail</string>
    <string name="login">Login</string>
    <string name="psw">Mot de passe</string>
</resources>